# gst-recipes

./: README
gst-app/: ChangeLog  Makefile.am  autogen.sh  configure.ac
gst-app/src/: Makefile.am  gst-app.h  load.c  load.h  main.c  play.c
gst-plugin/: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
gst-plugin-collectpadsnoop/: AUTHORS  README  configure.ac
gst-plugin-collectpadsnoop/src/: Makefile.am  gstcollectpadsnoop.c  gstcollectpadsnoop.h  gstplugin.c
gst-plugin/m4/: as-version.m4
gst-plugin/plplot/: Makefile.am  gstplplotsink.c  gstplplotsink.h
gst-plugin/src/: Makefile.am  gstaudiofilter.c  gstplugin.c  gstplugin.h  gsttransform.c  gsttransform.h
gst-plugin/tools/: make_element
